[tool.poetry]
name = "snapquest"
version = "0.1.0"
description = "A location-based picture hunt game using SMS and AI."
authors = ["Christopher Queen <christopher.queen@gmail.com>"]
license = "MIT"
packages = [
    { include = "cqc_snapquest", from = "src" },
]


[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.22.0"
sqlalchemy = "^2.0.0"
mysql-connector-python = "^8.0.31"
alembic = "^1.10.0"
requests = "^2.28.2"
twilio = "^7.10.0"
openai = "^1.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
httpx = "^0.23.3"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
